crates/engine_assets/src/snapshots/engine_assets__scene__tests__when_minimal_scene_def_serialized_to_pretty_ron_then_snapshot_matches.snap
---
source: crates/engine_assets/src/scene.rs
assertion_line: 170
expression: pretty
---
(
    nodes: [
        (
            name: "parent",
            transform: (
                position: (0.0, 0.0),
                rotation: 0.0,
                scale: (1.0, 1.0),
            ),
        ),
        (
            name: "child",
            transform: (
                position: (0.0, 0.0),
                rotation: 0.0,
                scale: (1.0, 1.0),
            ),
            parent_index: Some(0),
        ),
    ],
)
