crates/engine_assets/src/snapshots/engine_assets__scene__tests__when_scene_node_def_with_all_fields_serialized_to_pretty_ron_then_snapshot_matches.snap
---
source: crates/engine_assets/src/scene.rs
assertion_line: 218
expression: pretty
---
(
    nodes: [
        (
            name: "full",
            transform: (
                position: (10.0, 20.0),
                rotation: 1.0,
                scale: (2.0, 2.0),
            ),
            parent_index: Some(0),
            visible: Some((true)),
            render_layer: Some(Foreground),
            sort_order: Some((3)),
            sprite: Some((
                texture: (1),
                uv_rect: (0.0, 0.0, 1.0, 1.0),
                color: (
                    r: 1.0,
                    g: 0.0,
                    b: 0.0,
                    a: 1.0,
                ),
                width: (16.0),
                height: (16.0),
            )),
            shape: Some((
                variant: Circle(
                    radius: 10.0,
                ),
                color: (
                    r: 0.0,
                    g: 0.0,
                    b: 1.0,
                    a: 1.0,
                ),
            )),
            camera: Some((
                position: (50.0, 50.0),
                zoom: 1.5,
            )),
            rigid_body: Some(Dynamic),
            collider: Some(Circle(5.0)),
            material: Some((
                blend_mode: Alpha,
                shader: (0),
                textures: [],
                uniforms: [],
            )),
            bloom_settings: Some((
                enabled: true,
                threshold: 0.8,
                intensity: 0.3,
                blur_radius: 4,
            )),
            audio_emitter: Some((
                volume: 0.9,
                max_distance: 300.0,
            )),
        ),
    ],
)
