crates/engine_assets/src/snapshots/engine_assets__scene__tests__when_scene_with_audio_emitter_serialized_to_pretty_ron_then_snapshot_matches.snap
---
source: crates/engine_assets/src/scene.rs
assertion_line: 296
expression: pretty
---
(
    nodes: [
        (
            name: "speaker",
            transform: (
                position: (0.0, 0.0),
                rotation: 0.0,
                scale: (1.0, 1.0),
            ),
            audio_emitter: Some((
                volume: 0.75,
                max_distance: 500.0,
            )),
        ),
    ],
)
