crates/engine_assets/src/snapshots/engine_assets__scene__tests__when_scene_with_convex_polygon_collider_serialized_to_pretty_ron_then_snapshot_matches.snap
---
source: crates/engine_assets/src/scene.rs
assertion_line: 240
expression: pretty
---
(
    nodes: [
        (
            name: "diamond",
            transform: (
                position: (0.0, 0.0),
                rotation: 0.0,
                scale: (1.0, 1.0),
            ),
            collider: Some(ConvexPolygon([
                (0.0, 10.0),
                (10.0, 0.0),
                (0.0, -10.0),
                (-10.0, 0.0),
            ])),
        ),
    ],
)
