crates/engine_assets/src/snapshots/engine_assets__scene__tests__when_scene_with_material_serialized_to_pretty_ron_then_snapshot_matches.snap
---
source: crates/engine_assets/src/scene.rs
assertion_line: 327
expression: pretty
---
(
    nodes: [
        (
            name: "glowing",
            transform: (
                position: (0.0, 0.0),
                rotation: 0.0,
                scale: (1.0, 1.0),
            ),
            material: Some((
                blend_mode: Additive,
                shader: (3),
                textures: [
                    (
                        texture: (0),
                        binding: 0,
                    ),
                    (
                        texture: (1),
                        binding: 1,
                    ),
                ],
                uniforms: [
                    64,
                    128,
                    255,
                ],
            )),
        ),
    ],
)
